<resources>
    <string name="app_name">VODA_handy</string>

    //detail menu
    <string name="detail_warning">메뉴 사진은 연출된 이미지로 실제 조리된 음식과 다를 수 있습니다.</string>
    <string name="detail_number">개 담기</string>
    <string name="detail_more">곱빼기 (+500원)</string>
    <string name="detail_normal">기본</string>

    //shopping basket
    <string name="basket_title">장바구니</string>
    <string name="basket_all_remove">전체삭제</string>
    <string name="basket_price">총 주문금액</string>
    <string name="basket_warning">V.O.D.A는 통신판매중개자이며 통신판매의 당사자가 아닙니다. 따라서 V.O.D.A는 상품 및 거래 정보 및 거래에 책임을 지지 않습니다.</string>
    <string name="basket_dialog_warning">모두 삭제하시겠습니까?</string>
    <string name="basket_dialog_no">취소</string>
    <string name="basket_dialog_yes">확인</string>
    //shopping basket empty
    <string name="basket_empty_explain">장바구니가 텅 비었어요.</string>

    //order_success
    <string name="order_success_tohome">홈으로</string>
</resources>