<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:text="@string/basket_dialog_warning"
        android:textSize="16sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_basket_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="13dp"
            android:text="@string/basket_dialog_no"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <View
            android:layout_width="0.2dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/dialog_basket_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="13dp"
            android:text="@string/basket_dialog_yes"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>


</LinearLayout>