<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingBasketActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/basket_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/basket_toolbar"
            android:background="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="47.0dip"
            android:backgroundTint="@android:color/white"
            app:layout_scrollFlags="enterAlways">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip">

                <ImageView
                    android:id="@+id/iv_basket_back"
                    android:layout_gravity="center_vertical"
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/icon_back" />

                <TextView
                    android:id="@+id/tv_basket_title"
                    android:textSize="18.0dip"
                    android:textColor="#000000"
                    android:ellipsize="end"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="10.0dip"
                    android:fontFamily="@font/applesdgothicneob"
                    android:text="@string/basket_title"
                    android:maxLines="1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_basket_remove"
                    android:textSize="18.0dip"
                    android:textColor="@color/gray"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/basket_all_remove"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        app:layout_constraintTop_toBottomOf="@id/basket_appbar"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/iv_basket_empty"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basket_appbar"
        android:layout_marginRight="30dp"
        android:src="@drawable/empty"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_basket_empty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/basket_empty_explain"/>

</androidx.constraintlayout.widget.ConstraintLayout>