<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingBasketActivity"
    android:background="@color/gray">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/basket_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/basket_toolbar"
            android:background="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="47.0dip"
            android:backgroundTint="@android:color/white"
            app:layout_scrollFlags="enterAlways">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip">

                <ImageView
                    android:id="@+id/iv_basket_back"
                    android:layout_gravity="center_vertical"
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/icon_back" />

                <TextView
                    android:id="@+id/tv_basket_title"
                    android:textSize="18.0dip"
                    android:textColor="#000000"
                    android:ellipsize="end"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="10.0dip"
                    android:fontFamily="@font/applesdgothicneob"
                    android:text="@string/basket_title"
                    android:maxLines="1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_basket_remove"
                    android:textSize="18.0dip"
                    android:textColor="#000000"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/basket_all_remove"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="0.2dp"
    app:layout_constraintTop_toBottomOf="@id/basket_appbar"
    android:background="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/basket_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_basket_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="25dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_basket_store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="16dp"
                    android:text="store name"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_below="@id/tv_basket_store_name"
                    android:background="@color/black"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_basket_order_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rl_basket_store"
                android:layout_marginTop="20dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/tv_basket_more"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/rv_basket_order_list"
                android:textAlignment="center"
                android:gravity="center"
                android:text="+ 더 담으러 가기"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                app:layout_constraintTop_toBottomOf="@id/tv_basket_more"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/rl_basket_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_basket_more"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/basket_price"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_basket_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="23000원"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                app:layout_constraintTop_toBottomOf="@id/rl_basket_price"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/tv_basket_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_basket_price"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/basket_warning"
                android:textSize="10sp"
                android:textAlignment="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_basket_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:text="23000원 주문하기"/>

</androidx.constraintlayout.widget.ConstraintLayout>