<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedMenuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:background="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="47.0dip"
            android:backgroundTint="@android:color/white"
            app:layout_scrollFlags="enterAlways">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_detail_back"
                    android:layout_gravity="center_vertical"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/back" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_detail_menu"
                android:layout_width="208dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="33dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_detail_menu_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_menu"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/nanumsquareroundeb"
                android:textStyle="normal"
                android:textSize="26sp"
                android:textColor="@color/title_black"
                tools:text="산채비빔밥"/>

            <TextView
                android:id="@+id/tv_detail_menu_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_menu_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="18dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:fontFamily="@font/nanumsquareroundr"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:lineSpacingExtra="6sp"
                android:gravity="center_horizontal"
                tools:text="고슬고슬하게 지은 밥에 산채나물과 표고버섯, 시금치나물, 콩나물 등을 얹어 고추장에 비벼먹는 비빔밥이다."/>

            <View
                android:id="@+id/v_detail_number"
                android:layout_width="80dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_menu_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="41dp"
                android:background="@drawable/rectangle_beige"/>

            <TextView
                android:id="@+id/tv_detail_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareroundr"
                android:gravity="center_horizontal"
                android:textColor="@color/text_black"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/v_detail_number"
                app:layout_constraintLeft_toLeftOf="@id/v_detail_number"
                app:layout_constraintRight_toRightOf="@id/v_detail_number"
                app:layout_constraintTop_toTopOf="@id/v_detail_number"
                android:text="1" />

            <View
                android:id="@+id/v_detail_minus"
                android:layout_width="72dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="@id/v_detail_number"
                app:layout_constraintBottom_toBottomOf="@id/v_detail_number"
                app:layout_constraintRight_toLeftOf="@id/v_detail_number"
                android:layout_marginRight="8dp"
                android:background="@drawable/rectangle_beige_left"/>

            <ImageView
                android:id="@+id/iv_detail_minus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@id/v_detail_minus"
                app:layout_constraintBottom_toBottomOf="@id/v_detail_minus"
                app:layout_constraintLeft_toLeftOf="@id/v_detail_minus"
                app:layout_constraintRight_toRightOf="@id/v_detail_minus"
                android:src="@drawable/minus"
                tools:text="2"/>

            <View
                android:id="@+id/v_detail_plus"
                android:layout_width="72dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="@id/v_detail_number"
                app:layout_constraintBottom_toBottomOf="@id/v_detail_number"
                app:layout_constraintLeft_toRightOf="@id/v_detail_number"
                android:layout_marginLeft="8dp"
                android:background="@drawable/rectangle_beige_right"/>

            <ImageView
                android:id="@+id/iv_detail_plus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@id/v_detail_plus"
                app:layout_constraintBottom_toBottomOf="@id/v_detail_plus"
                app:layout_constraintLeft_toLeftOf="@id/v_detail_plus"
                app:layout_constraintRight_toRightOf="@id/v_detail_plus"
                android:src="@drawable/plus"
                tools:text="2"/>

            <CheckBox
                android:id="@+id/cb_detail_normal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/v_detail_number"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="55dp"
                android:button="@null"
                android:background="@drawable/checkbox"
                android:checked="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/cb_detail_normal"
                app:layout_constraintTop_toTopOf="@id/cb_detail_normal"
                app:layout_constraintBottom_toBottomOf="@id/cb_detail_normal"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/nanumsquareroundr"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_gray"
                android:text="@string/detail_normal"/>

            <CheckBox
                android:id="@+id/cb_detail_more"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/cb_detail_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:button="@null"
                android:background="@drawable/checkbox"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/cb_detail_more"
                app:layout_constraintTop_toTopOf="@id/cb_detail_more"
                app:layout_constraintBottom_toBottomOf="@id/cb_detail_more"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/nanumsquareroundr"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_gray"
                android:text="@string/detail_more"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_detail_order"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/btn_detail_order"
        app:layout_constraintRight_toRightOf="@id/btn_detail_order"
        app:layout_constraintTop_toTopOf="@id/btn_detail_order"
        app:layout_constraintBottom_toBottomOf="@id/btn_detail_order"
        android:elevation="2dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_detail_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquareroundeb"
            android:textStyle="normal"
            android:textSize="32dp"
            android:textColor="@color/light_beige"
            android:text="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/nanumsquareroundeb"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/light_beige"
            android:text="@string/detail_number" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_detail_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/btn_detail_order"
        app:layout_constraintTop_toTopOf="@id/btn_detail_order"
        app:layout_constraintBottom_toBottomOf="@id/btn_detail_order"
        android:layout_marginRight="17dp"
        android:elevation="2dp"
        android:text="23000원"
        android:textColor="@color/light_beige"
        android:fontFamily="@font/nanumsquareroundb"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>